--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Github Search</a>
+            <a class="navbar-brand" href="#" style="    margin: 10px 0px 10px -255px;
+    font-size: 30px;">Github Search</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -16,11 +17,14 @@
         </div><!--/.nav-collapse -->
     </div>
 </nav>
+<div class="git_img">
+ <img src="images/git.png">   
+</div>
 
 <div class="container">
 
     <div class="row">
-        <div class="col-md-8 collapse-md-offset-2">
+        <div class="col-md-8 collapse-md-offset-2" >
             <github></github>
 
         </div>
